--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <meta http-equiv = "refresh" content = "2; url =https://ali-nazari.ir/" />
+      <meta http-equiv="Refresh" content="0; url=https://www.ali-nazari.ir/" />
    </head>
 </html>
