--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
 <html>
-   <head>
-      <meta http-equiv="Refresh" content="0; url=https://www.ali-nazari.ir/" />
-   </head>
+<script>
+	window.location.replace("https://ali-nazari.ir");
+</script>
 </html>
