--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <script>
-	window.location.replace("https://ali-nazari.ir");
+	window.location.replace("http://ali-nazari.ir");
 </script>
 </html>
